--- a/index.html
+++ b/index.html
@@ -1874,13 +1874,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </div>
 
-    <!--<div class="preloader">
+      <div class="preloader">
         <div class="preloader-wrapper">
           <div class="preloader__logo">
             <img src="gif/preloader.gif" alt="">
           </div>
         </div>
-      </div>-->
+      </div>
     </div>
 
     <script type="text/javascript" src="../cdn.jsdelivr.net/npm/%40emailjs/browser%403/dist/email.min.js"></script>
